Changelog
=========

1.7 - unreleased
----------------

- remove deprecation warning on plone4.1
  [toutpt]

1.6 - 2011-09-13
----------------

* Make it plone 4 compatible, thanks to Rafahela Garcia Bazzanella for fix [martior]

* Added Portuguese Brazilian transaltions from Rafahela Garcia Bazzanella [martior]

* Direct import of  IVocabularyFactory for Plone 4.1 compatibility. [lewy]

* Fix bad cache key on entries(). Previously, the repr of a generator object
  was used. This meant effectively no request caching. Worse, it caused intermittent
  cache-key overlap with more than one portlet rendered in the same request. 
  [tmog]

1.5 - 2011-03-02
----------------

* Wrap the full feed's entries in a div so we can visually separate them.
  [jbaldivieso]

* Fix the full feed's lookup of the feed entries so that the caching decorator
  can acquire the request from the view as it expects.
  [davisagli]

* Explicitly include plone.app.portlets' ZCML to ensure the plone.portlet
  directive works in all cases.
  [hannosch]

* Added Spanish translation
  [macagua]

1.4 - 2009-11-06
----------------

* Removed edit permission as this prevents feedmixer portlet being added to a
  user's dashboard.
  [matth]

1.3 - 2009-04-03
----------------

* Fix the full_feed view to have fallback when getting description from an feed
  item as it is not a required field in the rss2 standard.
  [martior]

1.2 - 2008-07-10
----------------

* Fix the "More ..." link of the portlet. We have to store the path to the
  context of the portlet assignment, because plone[.app].portlets doesn't
  expose it. This workaround was taken from ely.portlets.image.
  This will only work for newly created feedmixer portlets, existing ones
  will still create wrong urls in subfolders.
  [fschulze]

* Added french translation and made some i18n fixes.
  [glenfant]

1.1 - 2007-11-28
----------------

* Correct caching of mixed feed entries: caching per instance instead of